[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuque-mcp-tool"
version = "1.0.0"
description = "A MCP server for reading Yuque documents via session cookie"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "andy8663", email = "andy8663@126.com"}]
keywords = ["yuque", "mcp", "model-context-protocol", "claude", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.14.0",
]

[project.scripts]
yuque-mcp = "yuque_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
